# flutter_desktop

./: .gitignore  README.md  buildapp.bat  convert.py  debug.bat  doc_generate.bat  generate.bat  pubspec.yaml
browser/: .gitignore  README.md  pubspec.yaml
browser/example/: pubspec.yaml
browser/example/lib/: main.dart
browser/lib/: lib.dart
browser/lib/simple_browser/: browser.dart  browser_controller.dart  browser_history.dart
browser/test/: load_more_test.dart
integration_test/: simple_test.dart
lib/: main.dart
lib/bridge/: bridge_generated.dart  bridge_generated.freezed.dart  native.dart
lib/components/: app_style.dart  future_builder.dart  routers.dart  screen_fit_utils.dart  utils.dart  window_types.dart
lib/components/applications/: application.dart  application_controller.dart  application_details.dart  application_entry.dart  application_on_taskbar.dart  application_on_tray.dart  file_management_controller.dart
lib/components/context_menu/: desktop_context_menu.dart  (+2 more)
lib/isar/: browser_history.dart  browser_history.g.dart  database.dart  operation.dart  operation.g.dart  practice.dart  practice.g.dart
lib/platform/: logger.dart  operation_logger.dart  system_commands.dart  typing_game_logger.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
minesweeper/: .gitignore  README.md  pubspec.yaml
minesweeper/lib/: lib.dart
native/: Cargo.toml  build.rs
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
native/src/browser/: history.rs
native/src/db/: init.rs
native/src/files/: mod.rs  model.rs  virtual_folder.rs  vitrual_file.rs
native/src/idiom/: model.rs
native/src/native_sysinfo/: mod.rs
native/src/operation/: model.rs
native/src/tests/: include_test.rs  load_csv_test.rs  mod.rs
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust/src/db/: connection.rs
rust/src/files/: file_structure.rs  mod.rs  virtual_folder.rs  vitrual_file.rs
rust/src/idiom/: mod.rs  model.rs  practice.rs
rust/src/native_sysinfo/: mod.rs
rust/src/system/: mod.rs
rust/src/tests/: mod.rs  sysinfo_test.rs
simple_terminal/: pubspec.yaml
simple_terminal/example/: pubspec.yaml
simple_terminal/lib/: simple_terminal.dart
test/: custom_volume_test.dart  generate_csv.py  idiom_sample_test.dart  key_test.dart  menubar_test.dart  menubar_test_2.dart
windows/: CMakeLists.txt  rust.cmake
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  bridge_generated.native.h  main.cpp
(+99 files in other folders)
