[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib","staticlib","cdylib",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
flutter_rust_bridge = "= 1.62.1"
lazy_static = "1.4.0"

[build-dependencies]
flutter_rust_bridge_codegen = "= 1.62.1"