[package]
name = "native"
version = "0.1.6"
edition = "2021"

[lib]
crate-type = ["lib","staticlib","cdylib",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "= 1.0.66"
flutter_rust_bridge = "= 1.74.0"
infer = "0.12.0"
lazy_static = "1.4.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite","chrono" ] }
sysinfo = "0.27.7"
tokio = { version = "1.25.0", features = ["full"] }

[build-dependencies]
flutter_rust_bridge_codegen = "= 1.74.0"